object tree thumbnails and fixes it not showing up

--- a/styles/bluespess-editor.less
+++ b/styles/bluespess-editor.less
@@ -86,42 +86,28 @@
 		padding-left: @component-icon-padding;
 		padding-right: @component-padding;
 		background-color: inherit;
-
-		/*
-		 * Force a new stacking context to prevent a large, duplicate paint layer from
-		 * being created for tree-view's scrolling contents that can make the cost of
-		 * layer tree updates scale at 3x the size of the layer rather than the
-		 * optimal 1x.
-		 *
-		 * On high resolution displays, Chromium handles layers for scrolling content
-		 * differently and inadvertently creates a duplicate paint layer the size of
-		 * .tree-view-scroller because descendants of the scroller overlap the
-		 * auto-created layer.
-		 */
 		isolation: isolate;
-
-		// Expands tree-view root to take up full height.
-		// This makes sure that the context menu can still be openend in the empty
-		// area underneath the files.
 		flex-grow: 1;
-
-		// Expands tree-view root to take up as much width as needed by the content.
-		// This makes sure that the selected item's "bar/background" expands to full width.
 		position: relative;
 		min-width: min-content;
 	}
 
 	.object-tree-view-root .list-tree {
-		// Keeps selections expanded while dragging
 		position: static;
 	}
 
 	.entry {
-		// This fixes #110, see that issue for more details
 		&::before {
 			content: '';
 			position: absolute;
 		}
+	}
+
+	.object-tree-thumbnail {
+		max-width: 64px;
+		max-height: 20px;
+		margin: 2px 4px 2px 0px;
+		vertical-align: top;
 	}
 }
 
